apps/web/src/components/Footer/footer.module.scss
.container {
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 100%;
    background: var(--accent-primary-dark);
    color: var(--accent-primary-text);
    padding-top: 1rem;

    .content {
        display: grid;
        grid-template-rows: auto 1fr;
        gap: 1.5rem;
        width: 1465px;
        max-width: 100%;
        padding: var(--block-padding-large);

        .flag,
        .social-icon {
            overflow: hidden;
            height: 2.75rem;
            width: auto;

            img {
                height: 100%;
                width: 100%;
                object-fit: contain;
                object-position: center;
            }
        }

        .social-icon {
            aspect-ratio: 1 / 1;
        }
    }
}

